# tutorial-temporal-ai-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
activities/: activities.py  tool_activities.py
api/: main.py
docs/: README.md  architecture-decisions.md  architecture.md  contributing.md  setup.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/: ChatWindow.jsx  ConfirmInline.jsx  LLMResponse.jsx  LoadingIndicator.jsx  MessageBubble.jsx  NavBar.jsx
frontend/src/hooks/: useLocalChatHistory.js
frontend/src/pages/: App.jsx
frontend/src/services/: api.js
models/: core.py  requests.py
prompts/: agent_prompt_generators.py  prompts.py
scripts/: create_invoice_test.py  end_chat.py  find_events_test.py  flight_api_test.py  get_history.py  run_worker.py  search_flights_test.py  send_confirm.py
shared/: config.py
tools/: __init__.py  create_invoice.py  find_events.py  goal_registry.py  search_flights.py  tool_registry.py
tools/data/: find_events_data.json
worker/: worker.py
workflows/: agent_goal_workflow.py  workflow_helpers.py
